Update to 0.7.0 with graphql-java 22.3 and proto_lib upgrade