@@ -5,10 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <properties>
-        <java.version>16</java.version>
+        <java.version>17</java.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <rejoiner.version>0.6.0-SNAPSHOT</rejoiner.version>
+        <rejoiner.version>0.7.0-SNAPSHOT</rejoiner.version>
         <grpc.version>1.43.1</grpc.version><!-- CURRENT_GRPC_VERSION -->
         <auto-value.version>1.8.2</auto-value.version>
     </properties>
@@ -17,7 +17,7 @@
     <groupId>com.google.api.graphql</groupId>
     <artifactId>rejoiner-parent</artifactId>
     <packaging>pom</packaging>
-    <version>0.6.0-SNAPSHOT</version>
+    <version>0.7.0-SNAPSHOT</version>
     <name>Rejoiner Parent Project</name>
 
 
@@ -87,7 +87,7 @@
                             <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                             <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                             <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
-                            <arg>-J--illegal-access=permit</arg>
+<!--                            <arg>-J&#45;&#45;illegal-access=permit</arg>-->
                         </compilerArgs>
                         <annotationProcessorPaths>
                             <path>
@@ -219,17 +219,17 @@
         <dependency>
             <groupId>com.graphql-java</groupId>
             <artifactId>graphql-java</artifactId>
-            <version>19.1</version>
+            <version>22.3</version>
         </dependency>
         <dependency>
             <groupId>com.graphql-java</groupId>
             <artifactId>graphql-java-extended-scalars</artifactId>
-            <version>18.1</version>
+            <version>22.0</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>30.0-jre</version>
+            <version>33.3.0-jre</version>
         </dependency>
         <dependency>
             <groupId>aopalliance</groupId>
@@ -267,7 +267,7 @@
         <dependency>
             <groupId>com.google.truth.extensions</groupId>
             <artifactId>truth-proto-extension</artifactId>
-            <version>1.1</version>
+            <version>1.4.4</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
